tests/ui/unresolved/unresolved-import.stderr
error[E0432]: unresolved import `foo`
  --> $DIR/unresolved-import.rs:2:5
   |
LL | use foo::bar;
   |     ^^^ use of unresolved module or unlinked crate `foo`
   |
help: you might be missing a crate named `foo`, add it to your project and import it in your code
   |
LL + extern crate foo;
   |

error[E0432]: unresolved import `bar::Baz`
  --> $DIR/unresolved-import.rs:8:5
   |
LL | use bar::Baz as x;
   |     ^^^^^^^^^^^^^ no `Baz` in `bar`
   |
help: a similar name exists in the module
   |
LL - use bar::Baz as x;
LL + use bar::Bar as x;
   |

error[E0432]: unresolved import `food::baz`
  --> $DIR/unresolved-import.rs:14:5
   |
LL | use food::baz;
   |     ^^^^^^^^^ no `baz` in `food`
   |
note: module `food::zug::baz` exists but is inaccessible
  --> $DIR/unresolved-import.rs:34:9
   |
LL |         pub mod baz {
   |         ^^^^^^^^^^^ not accessible
help: a similar name exists in the module
   |
LL - use food::baz;
LL + use food::bag;
   |

error[E0432]: unresolved import `food::beens`
  --> $DIR/unresolved-import.rs:20:12
   |
LL | use food::{beens as Foo};
   |            ^^^^^^^^^^^^ no `beens` in `food`
   |
help: a similar name exists in the module
   |
LL - use food::{beens as Foo};
LL + use food::{beans as Foo};
   |

error[E0432]: unresolved import `MyEnum`
  --> $DIR/unresolved-import.rs:47:9
   |
LL |     use MyEnum::*;
   |         ^^^^^^
   |
help: a similar path exists
   |
LL |     use self::MyEnum::*;
   |         ++++++

error[E0432]: unresolved import `Enum`
  --> $DIR/unresolved-import.rs:58:9
   |
LL |     use Enum::*;
   |         ^^^^
   |
help: a similar path exists
   |
LL |     use self::Enum::*;
   |         ++++++

error: aborting due to 6 previous errors

For more information about this error, try `rustc --explain E0432`.
